CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(zuoye4)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Ceres REQUIRED)
INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

FIND_PACKAGE(glog REQUIRED)
INCLUDE_DIRECTORIES(${GLOG_INCLUDE_DIRS})

FIND_PACKAGE(gflags REQUIRED)
INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIRS})

ADD_EXECUTABLE(zuoye4 zuoye4.cpp)
TARGET_LINK_LIBRARIES(zuoye4 ${CERES_LIBRARIES} ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES} libgflags.a libglog.a)
