CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT( zuoye41 )
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 11)

#SET(CMAKE_BUILD_TYPE "Debug")
#SET(CMAKE_BUILD_TYPE "Release")

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})

ADD_EXECUTABLE(main zuoye41.cpp)
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})


